--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
     "sass": "^1.70.0",
     "scss": "^0.2.4"
   }
